--- a/css/style.css
+++ b/css/style.css
@@ -162,18 +162,22 @@ h3 {
     font-style: normal;
 }
 div.border-a {
-    position: relative;
-    border-radius: 10px;
-    margin: 0px;
+    margin-left: -15px;
+    margin-right: -15px;
     padding: 10px;
     background-color: #1A5D39;
-    height: 400px;
+    height: 300px;
+    padding-bottom: 0px;
 }
-iframe {
-    width: 70%;
-    position: relative;
-    top: 40px;
-    height: 315px;
+.dentro {
+    margin: 0px;
+    padding-top: 10px;
+    padding-bottom: 0px;
+    margin: auto;
+}
+.dentro > iframe {
+    width: 460px;
+    height: 260px;
 }
 .border-b {
     border-radius: 10px;
@@ -188,6 +192,7 @@ ul {
     text-align: left;
 }
 .tabela {
+    font-weight: 800;
     margin-top: 0px;
     margin-bottom: 0px;
     padding-left: 0px;
@@ -226,7 +231,7 @@ li {
 .negritotab {
     letter-spacing: 0.2px;
     text-align: justify;
-    font-weight: 600;
+    font-weight: 500;
 }
 footer {
     padding: 2px;
