--- a/css/style.css
+++ b/css/style.css
@@ -39,7 +39,6 @@ header {
     box-shadow: 1px 1px 10px rgba(0, 0, 0, 0.534);
     background-image: linear-gradient(to bottom, var(--cor1), var(--cor2
     ));
-    text-align: center;
     padding-top: 5px;
 }
 nav {
@@ -79,7 +78,6 @@ h2 {
     text-align: left;
 }
 .ajustemenu {
-    
     font-weight: bold;
     transition-duration: .6s;
     font-size: small;
@@ -102,12 +100,11 @@ section {
     box-shadow: 1px 1px 10px rgba(0, 0, 0, 0.466);
     border-radius: 0px 0px 10px 10px;
     background-color: white;
-    padding-left: 0px;
-    padding-right: 0px;
-    padding-top: 0px;
-    padding-bottom: 10px;
+    padding-bottom: 100px;
+
     margin-bottom: 10px;
     margin: auto;
+
     min-width: 320px;
     max-width: 900px;
 }
@@ -115,7 +112,6 @@ section {
     width: 100%;
 }
 h1 {
-
     text-align: left;
     color: var(--cor2);
     font-family: var(--fonte-droid), var(--fonte-padrao);
@@ -124,8 +120,8 @@ h1 {
 }
 .ajuste-b {
     padding-top: 20px;
-    padding-left: 15px;
-    padding-right: 15px;
+    padding-left: 5px;
+    padding-right: 5px;
 }
 .negrito {
     font-weight: normal;
@@ -162,22 +158,22 @@ h3 {
     font-style: normal;
 }
 div.border-a {
-    margin-left: -15px;
-    margin-right: -15px;
-    padding: 10px;
+    margin-left: 200px;
+    margin-right: 200px;
+    padding-right: 10px;
+    padding-left: 10px;
     background-color: #1A5D39;
     height: 300px;
-    padding-bottom: 0px;
 }
 .dentro {
-    margin: 0px;
     padding-top: 10px;
-    padding-bottom: 0px;
-    margin: auto;
+    padding-bottom: 1%;
 }
 .dentro > iframe {
-    width: 460px;
-    height: 260px;
+    top: 70%;
+    left: 5%;
+    width: 100%;
+    height: 270px;
 }
 .border-b {
     border-radius: 10px;
